--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Run tests
         run: mvn -B test
 
-  deploy:
+  fake-deploy:
     runs-on: ubuntu-latest
     needs: build-and-test
     if: github.ref == 'refs/heads/main'
@@ -44,15 +44,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.7.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Copy files to remote server
+      - name: Fake deploy step
         run: |
-          scp -o StrictHostKeyChecking=no -r target/*.jar ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:/var/www/my-app/
-
-      - name: Restart application on remote server
-        run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} "java -jar /var/www/my-app/my-app.jar &"
+          echo "🚀 Deploying application..."
+          echo "✅ Application successfully deployed (fake step just for deploy simulation)."
