--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,32 +44,15 @@ jobs:
         run: mvn -B test  # Команда для запуска тестов
 
   # Джоб для деплоя приложения
-  deploy:
-    runs-on: ubuntu-latest  # Запуск на Ubuntu
-    needs: build-and-test  # Зависит от успешного завершения джоба build-and-test
-    if: github.ref == 'refs/heads/main'  # Деплой выполняется только для ветки main
+  fake-deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    if: github.ref == 'refs/heads/main'
     steps:
-      # Шаг 1: Копирование кода из репозитория
       - name: Checkout code
-        uses: actions/checkout@v3  # Используется action для копирования кода
+        uses: actions/checkout@v3
 
-      # Шаг 2: Настройка SSH-соединения
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.7.0  # Используется action для настройки SSH
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}  # Приватный SSH-ключ из секретов
-
-      # Шаг 3: Добавление сервера в список доверенных хостов
-      - name: Add server to known_hosts
+      - name: Fake deploy step
         run: |
-          echo "${{ secrets.KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
-
-      # Шаг 4: Копирование файлов на сервер
-      - name: Copy files to the server
-        run: |
-          scp -r target/*.jar ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }}:/home/dn/myapp  # Копирует JAR-файлы на сервер
-
-      # Шаг 5: Перезапуск приложения на сервере
-      - name: Restart application on the server
-        run: |
-          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }} "java -jar /home/dn/myapp/myapp.jar &"  # Запускает приложение на сервере
+          echo "🚀 Deploying application..."
+          echo "✅ Application successfully deployed (fake step just for deploy simulation)."
